--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tabHome" tabTitle="Earning Overview" tabIcon="logo-usd"></ion-tab>
+  <ion-tab [root]="tabTransactions" tabTitle="Transactions" tabIcon="repeat"></ion-tab>
+  <ion-tab [root]="tabTicket" tabTitle="E-Ticket" tabIcon="qr-scanner"></ion-tab>
+  <ion-tab [root]="tabSettings" tabTitle="Settings" tabIcon="cog"></ion-tab>
 </ion-tabs>
