--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -6,9 +6,13 @@
 -->
 <ion-content padding>
 
-  <img src="assets/img/logo-square.png">
+  <section text-center>
+    <img src="assets/img/logo-square.png">
+  </section>
 
-  <p text-center>Welcome to your automated sales platform!</p>
+  <section padding class="welcome-text">
+    <h5 padding class="text color-light" text-center>Welcome to your automated sales platform!</h5>
+  </section>
 
   <button ion-button block (click)="login()">Login</button>
 
