--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -6,6 +6,6 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
   <button ion-button block color="danger" (click)="logout()">Logout</button>
 </ion-content>
