--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -15,11 +15,11 @@
   <ion-list>
 
     <ion-item>
-      <ion-input type="text" placeholder="Digistore24-ID/Email"></ion-input>
+      <ion-input type="email" placeholder="Digistore24-ID/Email" [(ngModel)]="username"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input #password type="{{pwdType}}" placeholder="Password"></ion-input>
+      <ion-input type="{{pwdType}}" placeholder="Password" [(ngModel)]="password"></ion-input>
       <button ion-button clear icon-only item-right (click)="showPassword()">
         <ion-icon name="ios-eye-outline" color="{{pwdType === 'password' ? 'light' : 'secondary' }}"></ion-icon>
       </button>
