Home page bottom logo

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -26,7 +26,30 @@
 <ion-content>
   <div [ngSwitch]="segment">
     <ion-list *ngSwitchCase="'total'">
-      <ion-list-header>Total Net</ion-list-header>
+      <!--<ion-list-header>Total Net</ion-list-header>-->
+      <ion-list>
+        <ion-list-header>
+          Total Net
+        </ion-list-header>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+        <ion-item>Test data for transparent bottom</ion-item>
+      </ion-list>
     </ion-list>
 
     <ion-list *ngSwitchCase="'month'">
@@ -42,5 +65,9 @@
     </ion-list>
   </div>
 </ion-content>
+
+<section class="bottom-logo">
+  <img src="assets/img/logo-long.png">
+</section>
 
 
