--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -12,23 +12,41 @@
     <p class="color-light" text-center>Login to continue</p>
   </section>
 
-  <ion-list>
+  <form [formGroup]="loginForm">
 
-    <ion-item>
-      <ion-input type="email" placeholder="Digistore24-ID/Email" [(ngModel)]="username"></ion-input>
-    </ion-item>
+    <ion-list>
 
-    <ion-item>
-      <ion-input type="{{pwdType}}" placeholder="Password" [(ngModel)]="password"></ion-input>
-      <button ion-button clear icon-only item-right (click)="showPassword()">
-        <ion-icon name="ios-eye-outline" color="{{pwdType === 'password' ? 'light' : 'secondary' }}"></ion-icon>
-      </button>
-    </ion-item>
+      <ion-label *ngIf="showedError" class="err-message" no-margin>
+        {{ showedError }}
+      </ion-label>
 
-  </ion-list>
+      <ion-item no-margin no-padding>
+        <ion-input formControlName="username" type="text" placeholder="Digistore24-ID/Email"></ion-input>
+      </ion-item>
+      <ion-row *ngIf="loginForm.controls['username'].invalid && loginForm.controls['username'].touched && !loginForm.controls['username'].pristine">
+        <ion-col>
+          <sup ion-text color="danger">Digistore24-ID/Email is required</sup>
+        </ion-col>
+      </ion-row>
+
+      <ion-item no-margin no-padding>
+        <ion-input formControlName="password" #password type="{{pwdType}}" placeholder="Password" (ionBlur)="checkValid('password')"></ion-input>
+        <button ion-button clear icon-only item-right (click)="showPassword()">
+          <ion-icon name="ios-eye-outline" color="{{pwdType === 'password' ? 'light' : 'secondary' }}"></ion-icon>
+        </button>
+      </ion-item>
+      <ion-row *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched && !loginForm.controls['password'].pristine">
+        <ion-col>
+          <sup ion-text color="danger">{{ showedErrorPass }}</sup>
+        </ion-col>
+      </ion-row>
+
+    </ion-list>
+
+  </form>
 
   <section>
-    <button ion-button block (click)="login()">Login</button>
+    <button ion-button block [disabled]="!loginForm.valid" (click)="login()">Login</button>
 
     <section class="footer" text-center>
       <a (click)="openBrowser('https://www.digistore24.com/extern/login/new_password')">Forgot Password?</a>
