--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -49,9 +49,9 @@
     <button ion-button block [disabled]="!loginForm.valid" (click)="login()">Login</button>
 
     <section class="footer" text-center>
-      <a (click)="openBrowser('https://www.digistore24.com/extern/login/new_password')">Forgot Password?</a>
+      <a (click)="openBrowser('/extern/login/new_password')">Forgot Password?</a>
       <br/>
-      <p class="color-light" text-center>Not a member yet? <a (click)="openBrowser('https://www.digistore24.com/signup')">Register</a></p>
+      <p class="color-light" text-center>Not a member yet? <a (click)="openBrowser('/signup')">Register</a></p>
     </section>
 
   </section>
