Transactions with period

--- a/src/pages/sort-by/sort-by.html
+++ b/src/pages/sort-by/sort-by.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
 
-    <ion-buttons start>
+    <ion-buttons left>
       <button ion-button clear color="clear" (click)="dismiss()" icon-left><ion-icon name="ios-arrow-back"></ion-icon>Cancel</button>
     </ion-buttons>
 
