--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -8,4 +8,5 @@
 
 <ion-content>
   <ion-list-header>Ticket list</ion-list-header>
+  <button ion-button block (click)="openPeriod()">Test</button>
 </ion-content>
