--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs [selectedIndex]="tabID">
   <ion-tab [root]="tabHome" tabTitle="Earning Overview" tabIcon="logo-euro"></ion-tab>
   <ion-tab [root]="tabTransactions" tabTitle="Transactions" tabIcon="repeat"></ion-tab>
   <ion-tab [root]="tabTicket" tabTitle="E-Ticket" tabIcon="qr-scanner"></ion-tab>
