--- a/src/pages/transactions/transactions.html
+++ b/src/pages/transactions/transactions.html
@@ -11,13 +11,13 @@
   <ion-grid *ngIf="currentPeriod" class="period" text-center no-padding>
     <ion-row align-items-center>
       <ion-col col-2>
-        <button small ion-button clear icon-only color="clear"><ion-icon name="arrow-back" md="ios-arrow-back"></ion-icon></button>
+        <button (click)="goPrev()" small ion-button clear icon-only color="clear"><ion-icon name="arrow-back" md="ios-arrow-back"></ion-icon></button>
       </ion-col>
       <ion-col col-8>
         This <span text-capitalize>{{currentPeriod}}</span>
       </ion-col>
       <ion-col col-2>
-        <button small ion-button clear icon-only color="clear"><ion-icon name="arrow-forward" md="ios-arrow-forward"></ion-icon></button>
+        <button (click)="goNext()" small ion-button clear icon-only color="clear"><ion-icon name="arrow-forward" md="ios-arrow-forward"></ion-icon></button>
       </ion-col>
     </ion-row>
   </ion-grid>
