--- a/src/pages/sort-by/sort-by.html
+++ b/src/pages/sort-by/sort-by.html
@@ -14,11 +14,76 @@
     </ion-buttons>
   </ion-navbar>
 
+  <ion-toolbar *ngIf="period" no-padding text-center>
+    <span class="subtitle">This <span text-capitalize>{{period}}</span></span>
+  </ion-toolbar>
+
 </ion-header>
 
 
 <ion-content no-padding>
+  <ion-list>
+    <button ion-item (click)="openOption('product_name')">
+      <ion-label>
+        Product Name
+      </ion-label>
+      <div item-content class="item-content">
+        A-Z
+        <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
+      </div>
+    </button>
+    <ion-list class="sublist" *ngIf="options.product_name" radio-group padding-left>
+      <ion-item>
+        <ion-label color="dark">A-Z</ion-label>
+        <ion-radio value="a-z" checked></ion-radio>
+      </ion-item>
+      <ion-item>
+        <ion-label color="dark">Z-A</ion-label>
+        <ion-radio value="z-a"></ion-radio>
+      </ion-item>
+    </ion-list>
 
+    <button ion-item (click)="openOption('earning')">
+      <ion-label>
+        Earning Amount
+      </ion-label>
+      <div item-content class="item-content">
+        Lowest first
+        <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
+      </div>
+    </button>
+    <ion-list class="sublist" *ngIf="options.earning" radio-group padding-left>
+      <ion-item>
+        <ion-label color="dark">Highest first</ion-label>
+        <ion-radio value="high" checked></ion-radio>
+      </ion-item>
+      <ion-item>
+        <ion-label color="dark">Lowest first</ion-label>
+        <ion-radio value="low"></ion-radio>
+      </ion-item>
+    </ion-list>
+
+    <button ion-item (click)="openOption('date')">
+      <ion-label>
+        Date
+      </ion-label>
+      <div item-content class="item-content">
+        Ascending
+        <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
+      </div>
+    </button>
+    <ion-list class="sublist" *ngIf="options.date" radio-group padding-left>
+      <ion-item>
+        <ion-label color="dark">Ascending</ion-label>
+        <ion-radio value="asc" checked></ion-radio>
+      </ion-item>
+      <ion-item>
+        <ion-label color="dark">Descending</ion-label>
+        <ion-radio value="desc"></ion-radio>
+      </ion-item>
+    </ion-list>
+
+  </ion-list>
 </ion-content>
 
 <section class="bottom-logo">
