--- a/src/pages/transaction-details/transaction-details.html
+++ b/src/pages/transaction-details/transaction-details.html
@@ -14,13 +14,13 @@
       <ion-row align-items-center>
         <ion-col col-7>
           <label class="label">Product Name / ID</label>
-          <p class="product_name">{{transaction.name}}</p>
+          <p class="product_name">{{transaction.name  || '-'}}</p>
         </ion-col>
         <ion-col col-5 text-right>
           <label class="label" >Order ID</label>
-          <p>{{transaction.orderID}}</p>
+          <p>{{transaction.orderID || '-'}}</p>
           <label class="label">Transaction ID</label>
-          <p>{{transaction.id}}</p>
+          <p>{{transaction.id  || '-'}}</p>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -29,11 +29,11 @@
       <ion-row>
         <ion-col col-6>
           <label class="label">Gross amount</label>
-          <h3>{{transaction.gross}}</h3>
+          <p>{{transaction.gross  || '-'}}</p>
         </ion-col>
         <ion-col col-6 >
           <label class="label">Net commission</label>
-          <p>{{transaction.net}}</p>
+          <p>{{transaction.net  || '-'}}</p>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -42,15 +42,15 @@
       <ion-row align-items-center>
         <ion-col col-4>
           <label class="label">Transaction type</label>
-          <p>{{transaction.type}}</p>
+          <p>{{transaction.type  || '-'}}</p>
         </ion-col>
         <ion-col col-4>
           <label class="label">Payment method</label>
-          <p>{{transaction.payment_method}}</p>
+          <p>{{transaction.payment_method  || '-'}}</p>
         </ion-col>
         <ion-col col-4>
           <label class="label">Currency</label>
-          <p>{{transaction.currency}}</p>
+          <p>{{transaction.currency  || '-'}}</p>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -64,32 +64,32 @@
       <ion-label padding-left>
         Name
       </ion-label>
-      <div item-content>
-        {{transaction.customer_name}}
+      <div item-content class="item-content" padding-right>
+        {{transaction.customer_name  || '-'}}
       </div>
     </ion-item>
     <ion-item no-padding>
       <ion-label padding-left>
         Email
       </ion-label>
-      <div item-content>
-        {{transaction.customer_email}}
+      <div item-content class="item-content" padding-right>
+        {{transaction.customer_email  || '-'}}
       </div>
     </ion-item>
     <ion-item no-padding>
       <ion-label padding-left>
         Phone number
       </ion-label>
-      <div item-content>
-        {{transaction.customer_phone}}
+      <div item-content class="item-content" padding-right>
+        {{transaction.customer_phone  || '-'}}
       </div>
     </ion-item>
     <ion-item no-padding>
       <ion-label padding-left>
         Affiliate
       </ion-label>
-      <div item-content>
-        {{transaction.customer_affiliate}}
+      <div item-content class="item-content" padding-right>
+        {{transaction.customer_affiliate  || '-'}}
       </div>
     </ion-item>
   </ion-list>
