--- a/src/pages/transactions/transactions.html
+++ b/src/pages/transactions/transactions.html
@@ -32,7 +32,7 @@
         <button ion-button class="nav-btn" clear color="primary" (click)="sortBy()">Sort By</button>
       </ion-col>
       <ion-col col-6 text-right>
-        <button *ngIf="!currentPeriod" ion-button class="nav-btn" clear color="primary">Search & Filters</button>
+        <button *ngIf="!currentPeriod" ion-button class="nav-btn" clear color="primary" (click)="openSearch()">Search & Filters</button>
         <button *ngIf="currentPeriod" small ion-button class="nav-btn" icon-only clear color="primary">
           <ion-icon name="search"></ion-icon>
         </button>
