--- a/src/pages/transaction-details/transaction-details.html
+++ b/src/pages/transaction-details/transaction-details.html
@@ -96,7 +96,7 @@
 
   <div class="divider"></div>
 
-  <button class="report-customer-btn" ion-item no-border>
+  <button class="report-customer-btn" ion-item no-border (click)="report()">
     <ion-icon name="ios-alert-outline" color="danger" item-start></ion-icon>
     Report customer
   </button>
