remove click functionality

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -90,7 +90,7 @@
             </ion-row>
           </ion-grid>
           <ion-list no-padding>
-            <button no-padding ion-item (click)="openOption('product_name')">
+            <button no-padding ion-item>
               <ion-label padding-left>
                 Affiliate
               </ion-label>
@@ -99,7 +99,7 @@
                 <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
               </div>
             </button>
-            <button no-padding ion-item (click)="openOption('affiliate')">
+            <button no-padding ion-item>
               <ion-label padding-left>
                 Transaction Type
               </ion-label>
@@ -150,7 +150,7 @@
 
           <ion-list>
             <ion-item-divider></ion-item-divider>
-            <button ion-item (click)="openOption('affiliate')">
+            <button ion-item>
               <ion-label>
                 Billing Type
               </ion-label>
