--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs [selectedIndex]="tabID">
-  <ion-tab [root]="tabHome" tabTitle="Earning Overview" tabIcon="logo-euro"></ion-tab>
+  <ion-tab [root]="tabEarning" tabTitle="Earning Overview" tabIcon="logo-euro"></ion-tab>
   <ion-tab [root]="tabTransactions" tabTitle="Transactions" tabIcon="repeat"></ion-tab>
   <ion-tab [root]="tabTicket" tabTitle="E-Ticket" tabIcon="qr-scanner"></ion-tab>
   <ion-tab [root]="tabSettings" tabTitle="Settings" tabIcon="cog"></ion-tab>
