Minor visual updates after feedback

--- a/src/pages/earning/earning.html
+++ b/src/pages/earning/earning.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar no-border-bottom>
     <ion-title text-center>
-      Earning Overview
+      Earnings
     </ion-title>
   </ion-navbar>
 
