--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -168,7 +168,7 @@
 </ion-content>
 
 <ion-footer>
-  <button large text-capitalize ion-button full color="secondary">Search</button>
+  <button large text-capitalize ion-button full color="secondary" no-margin>Search</button>
 </ion-footer>
 <section class="bottom-logo">
   <img src="assets/img/logo-long.png">
